[package]
name = "cplfs_api"
version = "0.1.0"
authors = ["Thomas Van Strydonck <Thomas.VanStrydonck@cs.kuleuven.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0" #Cross-platform memory-mapped files
serde = { version = "1.0.117", features = ["derive"] } #Deriving (de)serialization
bincode = "1.3.1" #Reading and writing serialized objects to buffers
lazy_static = "1.4.0" #Lazily evaluated statics
anyhow = "1.0.33" #Blanket error handling
thiserror = "1.0.21" #Concise error definitions, avoiding boilerplate